--- a/ch1/rot13.html
+++ b/ch1/rot13.html
@@ -1,13 +1,13 @@
-<ugzy>
-	<urnq>
-		<gvgyr>Uryyb, Jbeyq!</gvgyr>
-	</urnq>
-	<obql>
-		<c>
+<html>
+	<head>
+		<title>Uryyb, Jbeyq!</title>
+	</head>
+	<body>
+		<p>
 			Uv gurer, nyy bs lbh rneguyvatf.
-		</c>
-		<c>
+		</p>
+		<p>
 			Gnxr hf gb lbhe yrnqre.
-		</c>
-	</obql>
-</ugzy>
+		</p>
+	</body>
+</html>
